metatensor-core/include/metatensor.h

typedef int32_t mts_status_t;
typedef struct mts_block_t mts_block_t;
typedef struct mts_labels_t mts_labels_t;
typedef struct mts_tensormap_t mts_tensormap_t;
typedef uint64_t mts_data_origin_t;
typedef struct mts_data_movement_t {
  uintptr_t sample_in;
  uintptr_t sample_out;
  uintptr_t properties_start_in;
  uintptr_t properties_start_out;
  uintptr_t properties_length;
} mts_data_movement_t;
typedef struct mts_array_t {
  void *ptr;
  void (*destroy)(void *array);
  mts_status_t (*origin)(const void *array, mts_data_origin_t *origin);
  mts_status_t (*device)(const void *array, DLDevice *device);
  mts_status_t (*dtype)(const void *array, DLDataType *dtype);
  mts_status_t (*as_dlpack)(void *array,
                            DLManagedTensorVersioned **dl_managed_tensor,
                            DLDevice device,
                            const int64_t *stream,
                            DLPackVersion max_version);
  mts_status_t (*from_dlpack)(const void *array,
                              DLManagedTensorVersioned *dl_managed_tensor,
                              struct mts_array_t *new_array);
  mts_status_t (*shape)(const void *array, const uintptr_t **shape, uintptr_t *shape_count);
  mts_status_t (*reshape)(void *array, const uintptr_t *shape, uintptr_t shape_count);
  mts_status_t (*swap_axes)(void *array, uintptr_t axis_1, uintptr_t axis_2);
  mts_status_t (*create)(const void *array,
                         const uintptr_t *shape,
                         uintptr_t shape_count,
                         struct mts_array_t fill_value,
                         struct mts_array_t *new_array);
  mts_status_t (*copy)(const void *array, DLDevice device, struct mts_array_t *new_array);
  mts_status_t (*move_data)(void *output,
                            const void *input,
                            const struct mts_data_movement_t *movements,
                            uintptr_t movements_count);
} mts_array_t;
typedef uint8_t *(*mts_realloc_buffer_t)(void *user_data, uint8_t *ptr, uintptr_t new_size);
typedef mts_status_t (*mts_create_array_callback_t)(const uintptr_t *shape,
                                                    uintptr_t shape_count,
                                                    DLDataType dtype,
                                                    struct mts_array_t *array);
void mts_disable_panic_printing(void);
const char *mts_version(void);
mts_status_t mts_last_error(const char **message, const char **origin, void **data);
mts_status_t mts_labels_position(const struct mts_labels_t *labels,
                                 const int32_t *values,
                                 uintptr_t values_count,
                                 int64_t *result);
const struct mts_labels_t *mts_labels_clone(const struct mts_labels_t *labels);
mts_status_t mts_labels_union(const struct mts_labels_t *first,
                              const struct mts_labels_t *second,
                              const struct mts_labels_t **result,
                              int64_t *first_mapping,
                              uintptr_t first_mapping_count,
                              int64_t *second_mapping,
                              uintptr_t second_mapping_count);
mts_status_t mts_labels_intersection(const struct mts_labels_t *first,
                                     const struct mts_labels_t *second,
                                     const struct mts_labels_t **result,
                                     int64_t *first_mapping,
                                     uintptr_t first_mapping_count,
                                     int64_t *second_mapping,
                                     uintptr_t second_mapping_count);
mts_status_t mts_labels_difference(const struct mts_labels_t *first,
                                   const struct mts_labels_t *second,
                                   const struct mts_labels_t **result,
                                   int64_t *first_mapping,
                                   uintptr_t first_mapping_count);
mts_status_t mts_labels_select(const struct mts_labels_t *labels,
                               const struct mts_labels_t *selection,
                               uint64_t *selected,
                               uintptr_t *selected_count);
mts_status_t mts_labels_free(const struct mts_labels_t *labels);
mts_status_t mts_register_data_origin(const char *name, mts_data_origin_t *origin);
mts_status_t mts_get_data_origin(mts_data_origin_t origin, char *buffer, uintptr_t buffer_size);
struct mts_block_t *mts_block(struct mts_array_t data,
                              const struct mts_labels_t *samples,
                              const struct mts_labels_t *const *components,
                              uintptr_t components_count,
                              const struct mts_labels_t *properties);
mts_status_t mts_block_free(struct mts_block_t *block);
struct mts_block_t *mts_block_copy(const struct mts_block_t *block);
const struct mts_labels_t *mts_block_labels(const struct mts_block_t *block, uintptr_t axis);
mts_status_t mts_block_gradient(struct mts_block_t *block,
                                const char *parameter,
                                struct mts_block_t **gradient);
mts_status_t mts_block_data(struct mts_block_t *block, struct mts_array_t *data);
mts_status_t mts_block_add_gradient(struct mts_block_t *block,
                                    const char *parameter,
                                    struct mts_block_t *gradient);
mts_status_t mts_block_gradients_list(const struct mts_block_t *block,
                                      const char *const **parameters,
                                      uintptr_t *parameters_count);
mts_status_t mts_block_device(const struct mts_block_t *block, DLDevice *device);
mts_status_t mts_block_dtype(const struct mts_block_t *block, DLDataType *dtype);