julia/src/generated/_c_api.jl

# This file declares the C-API corresponding to metatensor.h

# This file is automatically generated by `julia/scripts/generate-declarations.py`,
# do not edit it manually!


# ========== Manual definitions ========= #
if Sys.WORD_SIZE == 32
    UIntptr = UInt32
elseif Sys.WORD_SIZE == 64
    UIntptr = UInt64
else
    error("unknown size of uintptr_t")
end

Cbool = Cuchar
mts_status_t = Int32
mts_data_origin_t = UInt64

mts_create_array_callback_t = Ptr{Cvoid}  # TODO: actual type
mts_realloc_buffer_t = Ptr{Cvoid}         # TODO: actual type
# ====== End of manual definitions ====== #


# ===== Macros definitions
MTS_SUCCESS = 0
MTS_INVALID_PARAMETER_ERROR = 1
MTS_IO_ERROR = 2
MTS_SERIALIZATION_ERROR = 3
MTS_BUFFER_SIZE_ERROR = 254
MTS_INTERNAL_ERROR = 255


# ===== Enum definitions


# enum DLDeviceType
const DLDeviceType = UInt32
const kDLCPU = DLDeviceType(1)
const kDLCUDA = DLDeviceType(2)
const kDLCUDAHost = DLDeviceType(3)
const kDLOpenCL = DLDeviceType(4)
const kDLVulkan = DLDeviceType(7)
const kDLMetal = DLDeviceType(8)
const kDLVPI = DLDeviceType(9)
const kDLROCM = DLDeviceType(10)
const kDLROCMHost = DLDeviceType(11)
const kDLExtDev = DLDeviceType(12)
const kDLCUDAManaged = DLDeviceType(13)
const kDLOneAPI = DLDeviceType(14)
const kDLWebGPU = DLDeviceType(15)
const kDLHexagon = DLDeviceType(16)
const kDLMAIA = DLDeviceType(17)
const kDLTrn = DLDeviceType(18)


# enum DLDataTypeCode
const DLDataTypeCode = UInt32
const kDLInt = DLDataTypeCode(0U)
const kDLUInt = DLDataTypeCode(1U)
const kDLFloat = DLDataTypeCode(2U)
const kDLOpaqueHandle = DLDataTypeCode(3U)
const kDLBfloat = DLDataTypeCode(4U)
const kDLComplex = DLDataTypeCode(5U)
const kDLBool = DLDataTypeCode(6U)
const kDLFloat8_e3m4 = DLDataTypeCode(7U)
const kDLFloat8_e4m3 = DLDataTypeCode(8U)
const kDLFloat8_e4m3b11fnuz = DLDataTypeCode(9U)
const kDLFloat8_e4m3fn = DLDataTypeCode(10U)
const kDLFloat8_e4m3fnuz = DLDataTypeCode(11U)
const kDLFloat8_e5m2 = DLDataTypeCode(12U)
const kDLFloat8_e5m2fnuz = DLDataTypeCode(13U)
const kDLFloat8_e8m0fnu = DLDataTypeCode(14U)
const kDLFloat6_e2m3fn = DLDataTypeCode(15U)
const kDLFloat6_e3m2fn = DLDataTypeCode(16U)
const kDLFloat4_e2m1fn = DLDataTypeCode(17U)


# ===== Struct definitions
struct DLPackVersion
    major :: UInt32
    minor :: UInt32
end

struct DLDevice
    device_type :: DLDeviceType
    device_id :: Int32
end

struct DLDataType
    code :: UInt8
    bits :: UInt8
    lanes :: UInt16
end

struct DLTensor
    data :: Ptr{Cvoid}
    device :: DLDevice
    ndim :: Int32
    dtype :: DLDataType
    shape :: Ptr{Int64}
    strides :: Ptr{Int64}
    byte_offset :: UInt64
end

struct DLManagedTensor
    dl_tensor :: DLTensor
    manager_ctx :: Ptr{Cvoid}
    deleter :: Ptr{Cvoid} #= (Ptr{DLManagedTensor}) -> Cvoid =#
end

struct DLManagedTensorVersioned
    version :: DLPackVersion
    manager_ctx :: Ptr{Cvoid}
    deleter :: Ptr{Cvoid} #= (Ptr{DLManagedTensorVersioned}) -> Cvoid =#
    flags :: UInt64
    dl_tensor :: DLTensor
end

struct DLPackExchangeAPIHeader
    version :: DLPackVersion
    prev_api :: Ptr{DLPackExchangeAPIHeader}
end

struct DLPackExchangeAPI
    header :: DLPackExchangeAPIHeader
    managed_tensor_allocator :: DLPackManagedTensorAllocator
    managed_tensor_from_py_object_no_sync :: DLPackManagedTensorFromPyObjectNoSync
    managed_tensor_to_py_object_no_sync :: DLPackManagedTensorToPyObjectNoSync
    dltensor_from_py_object_no_sync :: DLPackDLTensorFromPyObjectNoSync
    current_work_stream :: DLPackCurrentWorkStream
end

struct DLManagedTensorVersioned
end

struct mts_block_t
end

struct mts_tensormap_t
end

struct mts_labels_t
    internal_ptr_ :: Ptr{Cvoid}
    names :: Ptr{Ptr{Cchar}}
    values :: Ptr{Int32}
    size :: UIntptr
    count :: UIntptr
end

struct mts_data_movement_t
    sample_in :: UIntptr
    sample_out :: UIntptr
    properties_start_in :: UIntptr
    properties_start_out :: UIntptr
    properties_length :: UIntptr
end

struct mts_array_t
    ptr :: Ptr{Cvoid}
    destroy :: Ptr{Cvoid} #= (Ptr{Cvoid}) -> Cvoid =#
    origin :: Ptr{Cvoid} #= (Ptr{Cvoid}, Ptr{mts_data_origin_t}) -> mts_status_t =#
    device :: Ptr{Cvoid} #= (Ptr{Cvoid}, Ptr{DLDevice}) -> mts_status_t =#
    dtype :: Ptr{Cvoid} #= (Ptr{Cvoid}, Ptr{DLDataType}) -> mts_status_t =#
    as_dlpack :: Ptr{Cvoid} #= (Ptr{Cvoid}, Ptr{Ptr{DLManagedTensorVersioned}}, DLDevice, Ptr{Int64}, DLPackVersion) -> mts_status_t =#
    shape :: Ptr{Cvoid} #= (Ptr{Cvoid}, Ptr{Ptr{UIntptr}}, Ptr{UIntptr}) -> mts_status_t =#
    reshape :: Ptr{Cvoid} #= (Ptr{Cvoid}, Ptr{UIntptr}, UIntptr) -> mts_status_t =#
    swap_axes :: Ptr{Cvoid} #= (Ptr{Cvoid}, UIntptr, UIntptr) -> mts_status_t =#
    create :: Ptr{Cvoid} #= (Ptr{Cvoid}, Ptr{UIntptr}, UIntptr, mts_array_t, Ptr{mts_array_t}) -> mts_status_t =#
    copy :: Ptr{Cvoid} #= (Ptr{Cvoid}, Ptr{mts_array_t}) -> mts_status_t =#
    move_data :: Ptr{Cvoid} #= (Ptr{Cvoid}, Ptr{Cvoid}, Ptr{mts_data_movement_t}, UIntptr) -> mts_status_t =#
end



# ===== Function definitions

function mts_disable_panic_printing()
    ccall((:mts_disable_panic_printing, libmetatensor), 
        Cvoid,
        (),
        
    )
end

function mts_version()
    ccall((:mts_version, libmetatensor), 
        Ptr{Cchar},
        (),
        
    )
end

function mts_last_error()
    ccall((:mts_last_error, libmetatensor), 
        Ptr{Cchar},
        (),
        
    )
end

function mts_labels_position(labels::mts_labels_t, values::Ptr{Int32}, values_count::UIntptr, result::Ptr{Int64})
    ccall((:mts_labels_position, libmetatensor), 
        mts_status_t,
        (mts_labels_t, Ptr{Int32}, UIntptr, Ptr{Int64},),
        labels, values, values_count, result
    )
end

function mts_labels_create(labels::Ptr{mts_labels_t})
    ccall((:mts_labels_create, libmetatensor), 
        mts_status_t,
        (Ptr{mts_labels_t},),
        labels
    )
end

function mts_labels_create_assume_unique(labels::Ptr{mts_labels_t})
    ccall((:mts_labels_create_assume_unique, libmetatensor), 
        mts_status_t,
        (Ptr{mts_labels_t},),
        labels
    )
end

function mts_labels_set_user_data(labels::mts_labels_t, user_data::Ptr{Cvoid}, user_data_delete::Ptr{Cvoid} #= (Ptr{Cvoid}) -> Cvoid =#)
    ccall((:mts_labels_set_user_data, libmetatensor), 
        mts_status_t,
        (mts_labels_t, Ptr{Cvoid}, Ptr{Cvoid} #= (Ptr{Cvoid}) -> Cvoid =#,),
        labels, user_data, user_data_delete
    )
end

function mts_labels_user_data(labels::mts_labels_t, user_data::Ptr{Ptr{Cvoid}})
    ccall((:mts_labels_user_data, libmetatensor), 
        mts_status_t,
        (mts_labels_t, Ptr{Ptr{Cvoid}},),
        labels, user_data
    )
end

function mts_labels_clone(labels::mts_labels_t, clone::Ptr{mts_labels_t})
    ccall((:mts_labels_clone, libmetatensor), 
        mts_status_t,
        (mts_labels_t, Ptr{mts_labels_t},),
        labels, clone
    )
end

function mts_labels_union(first::mts_labels_t, second::mts_labels_t, result::Ptr{mts_labels_t}, first_mapping::Ptr{Int64}, first_mapping_count::UIntptr, second_mapping::Ptr{Int64}, second_mapping_count::UIntptr)
    ccall((:mts_labels_union, libmetatensor), 
        mts_status_t,
        (mts_labels_t, mts_labels_t, Ptr{mts_labels_t}, Ptr{Int64}, UIntptr, Ptr{Int64}, UIntptr,),
        first, second, result, first_mapping, first_mapping_count, second_mapping, second_mapping_count
    )
end

function mts_labels_intersection(first::mts_labels_t, second::mts_labels_t, result::Ptr{mts_labels_t}, first_mapping::Ptr{Int64}, first_mapping_count::UIntptr, second_mapping::Ptr{Int64}, second_mapping_count::UIntptr)
    ccall((:mts_labels_intersection, libmetatensor), 
        mts_status_t,
        (mts_labels_t, mts_labels_t, Ptr{mts_labels_t}, Ptr{Int64}, UIntptr, Ptr{Int64}, UIntptr,),
        first, second, result, first_mapping, first_mapping_count, second_mapping, second_mapping_count
    )
end

function mts_labels_difference(first::mts_labels_t, second::mts_labels_t, result::Ptr{mts_labels_t}, first_mapping::Ptr{Int64}, first_mapping_count::UIntptr)
    ccall((:mts_labels_difference, libmetatensor), 
        mts_status_t,
        (mts_labels_t, mts_labels_t, Ptr{mts_labels_t}, Ptr{Int64}, UIntptr,),
        first, second, result, first_mapping, first_mapping_count
    )
end

function mts_labels_select(labels::mts_labels_t, selection::mts_labels_t, selected::Ptr{Int64}, selected_count::Ptr{UIntptr})
    ccall((:mts_labels_select, libmetatensor), 
        mts_status_t,
        (mts_labels_t, mts_labels_t, Ptr{Int64}, Ptr{UIntptr},),
        labels, selection, selected, selected_count
    )
end

function mts_labels_free(labels::Ptr{mts_labels_t})
    ccall((:mts_labels_free, libmetatensor), 
        mts_status_t,
        (Ptr{mts_labels_t},),
        labels
    )
end

function mts_register_data_origin(name::Ptr{Cchar}, origin::Ptr{mts_data_origin_t})
    ccall((:mts_register_data_origin, libmetatensor), 
        mts_status_t,
        (Ptr{Cchar}, Ptr{mts_data_origin_t},),
        name, origin
    )
end

function mts_get_data_origin(origin::mts_data_origin_t, buffer::Ptr{Cchar}, buffer_size::UIntptr)
    ccall((:mts_get_data_origin, libmetatensor), 
        mts_status_t,
        (mts_data_origin_t, Ptr{Cchar}, UIntptr,),
        origin, buffer, buffer_size
    )
end

function mts_block(data::mts_array_t, samples::mts_labels_t, components::Ptr{mts_labels_t}, components_count::UIntptr, properties::mts_labels_t)
    ccall((:mts_block, libmetatensor), 
        Ptr{mts_block_t},
        (mts_array_t, mts_labels_t, Ptr{mts_labels_t}, UIntptr, mts_labels_t,),
        data, samples, components, components_count, properties
    )
end

function mts_block_free(block::Ptr{mts_block_t})
    ccall((:mts_block_free, libmetatensor), 
        mts_status_t,
        (Ptr{mts_block_t},),
        block
    )
end

function mts_block_copy(block::Ptr{mts_block_t})
    ccall((:mts_block_copy, libmetatensor), 
        Ptr{mts_block_t},
        (Ptr{mts_block_t},),
        block
    )
end

function mts_block_labels(block::Ptr{mts_block_t}, axis::UIntptr, labels::Ptr{mts_labels_t})
    ccall((:mts_block_labels, libmetatensor), 
        mts_status_t,
        (Ptr{mts_block_t}, UIntptr, Ptr{mts_labels_t},),
        block, axis, labels
    )
end

function mts_block_gradient(block::Ptr{mts_block_t}, parameter::Ptr{Cchar}, gradient::Ptr{Ptr{mts_block_t}})
    ccall((:mts_block_gradient, libmetatensor), 
        mts_status_t,
        (Ptr{mts_block_t}, Ptr{Cchar}, Ptr{Ptr{mts_block_t}},),
        block, parameter, gradient
    )
end

function mts_block_data(block::Ptr{mts_block_t}, data::Ptr{mts_array_t})
    ccall((:mts_block_data, libmetatensor), 
        mts_status_t,
        (Ptr{mts_block_t}, Ptr{mts_array_t},),
        block, data
    )
end

function mts_block_add_gradient(block::Ptr{mts_block_t}, parameter::Ptr{Cchar}, gradient::Ptr{mts_block_t})
    ccall((:mts_block_add_gradient, libmetatensor), 
        mts_status_t,
        (Ptr{mts_block_t}, Ptr{Cchar}, Ptr{mts_block_t},),
        block, parameter, gradient
    )
end

function mts_block_gradients_list(block::Ptr{mts_block_t}, parameters::Ptr{Ptr{Ptr{Cchar}}}, parameters_count::Ptr{UIntptr})
    ccall((:mts_block_gradients_list, libmetatensor), 
        mts_status_t,
        (Ptr{mts_block_t}, Ptr{Ptr{Ptr{Cchar}}}, Ptr{UIntptr},),
        block, parameters, parameters_count
    )
end

function mts_block_device(block::Ptr{mts_block_t}, device::Ptr{DLDevice})
    ccall((:mts_block_device, libmetatensor), 
        mts_status_t,
        (Ptr{mts_block_t}, Ptr{DLDevice},),
        block, device
    )
end

function mts_block_dtype(block::Ptr{mts_block_t}, dtype::Ptr{DLDataType})
    ccall((:mts_block_dtype, libmetatensor), 
        mts_status_t,
        (Ptr{mts_block_t}, Ptr{DLDataType},),
        block, dtype
    )
end
